Add test action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,24 +1,24 @@
-name: test
-on: [push, pull_request]
-env:
-  BUILD_ENV: test
-  TEST_DATABASE_URL: postgresql://postgres:postgres@postgres:5432/express-test?sslmode=disable
+name: C Test
+
+on:
+  push:
+    branches:
+      - main  # Change this to your main branch name
+
 jobs:
-  test-linux:
+  build:
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/${{ github.repository }}:master
-    services:
-      postgres:
-        image: postgres
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
-        ports:
-        - 5432:5432
-        # needed because the postgres container does not provide a healthcheck
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
-      - uses: actions/checkout@v2
-      - run: make test
+    - name: Check out code
+      uses: actions/checkout@v2
+
+    - name: Install CMake and GCC
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y cmake gcc
+    
+    - name: Run program-tests
+      run: |
+        ./program-tests
+
