--- a/.github/workflows/clang-format-validation.yml
+++ b/.github/workflows/clang-format-validation.yml
@@ -1,21 +1,19 @@
 name: Validate code format with clang-format
 on: [push, pull_request]
 jobs:
-  validate:
+  formatting-check:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        path:
+          - check: "*"
+            exclude: "lib/**"
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Install clang-format
-      run: |
-        # https://apt.llvm.org/llvm.sh
-        wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-        sudo add-apt-repository 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main'
-        sudo apt-get update
-        sudo apt-get install -y clang-format-9
-
-    - name: Check diff
-      run: |
-        git ls-files *.{c,h,hpp,cpp,cc} | xargs clang-format-9 -style=file -i
-        git diff --exit-code
-
+    - uses: actions/checkout@v3
+    - name: Run clang-format style check
+      uses: jidicula/clang-format-action@v4.9.0
+      with: 
+        clang-format-version: "15"
+        check-path: ${{ matrix.path['check'] }}
+        exclude-regex: ${{ matrix.path['exclude'] }}
+        fallback-style: "Google"
