--- a/trabalho-pratico/.vscode/settings.json
+++ b/trabalho-pratico/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "users.h": "c",
         "parser.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "reservations.h": "c"
     }
 }
