Create the setup of the repository (parser is already done)

--- a/trabalho-pratico/.vscode/settings.json
+++ b/trabalho-pratico/.vscode/settings.json
@@ -3,6 +3,7 @@
         "users.h": "c",
         "parser.h": "c",
         "string.h": "c",
-        "reservations.h": "c"
+        "reservations.h": "c",
+        "flights.h": "c"
     }
 }
