feat: add query5 (#41)
* feat: set airport stats

* feat: add query5 and airport stats

* fix: minimal leaks in reservation service

* fix: parameters input

* fix: format code

* fix: query4 leaks

* fix: query5 and properly store data for airport stats

* fix: make format

* fix: remove printf and correct output

--- a/trabalho-pratico/Makefile
+++ b/trabalho-pratico/Makefile
@@ -44,4 +44,4 @@ clean:
 
 .PHONY: format
 format:
-	clang-format -i -style=file src/*.c include/*.h tests/*.c
+	clang-format -i -style=file $(shell find src/ -name '*.c' -o -name '*.h') $(shell find include/ -name '*.h') $(shell find tests/ -name '*.c')
